--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "fs-extra": "^9.0.0",
     "http-errors": "~1.6.3",
+    "memorystore": "^1.6.7",
     "method-override": "^3.0.0",
     "mocha": "^7.1.2",
     "mongodb": "^3.0.11",
