--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
