--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "cloudinary": "^2.5.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
