--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.0.1",
     "startbootstrap-sb-admin-2": "^4.1.4"
   }
